--- a/src/main/webapp/css/menu.css
+++ b/src/main/webapp/css/menu.css
@@ -3,7 +3,8 @@
     padding: 25px;
     margin: 37px;
     padding: 0;
-    position: absolute; top: 0;
+    position: absolute;
+    top: 0;
 }
 
 .agregar>ul {
@@ -11,20 +12,20 @@
     padding:2px 2px 2px 10px;
     list-style: none;
 }
-.agregar>ul>li{ 
+.agregar>ul>li{
     display: inline-block;
     font-size: 13px;
     display: inline-block;
-    vertical-align:top;      
+    vertical-align:top;
 }
 
 .agregar>ul>li>a{
     width: 11em;
     color: white;
-    font-family: Open Sans, sans-serif;	
+    font-family: Open Sans, sans-serif;
     text-transform: uppercase;
     text-decoration: none;
-    display: block;            
+    display: block;
 }
 
 .agregar>ul>li>a:hover{
