--- a/src/main/webapp/css/tablaEstudiante.css
+++ b/src/main/webapp/css/tablaEstudiante.css
@@ -1,18 +1,17 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : Oct 8, 2023, 4:22:20 PM
-    Author     : jeffr
-*/
 
-
+body{
+        font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
 h2 {
     font-size: 14pt;
 }
 
 .box {
+    
 }
 
 .button {
@@ -31,7 +30,6 @@ h2 {
 .overlay {
 
     /* Centra el elemento en la parte superior del contenedor. */
-
     position: fixed;
     left: 0;
     right: 0;
@@ -89,6 +87,16 @@ h2 {
     overflow: auto;
 }
 
+.container{
+display: grid;
+  place-items: center; 
+  height: 100vh;
+  padding-bottom: 250px;
+  padding-top: 30px;
+  color: navy;
+    
+}
+
 @media screen and (max-width: 700px){
     .box{
         width: 70%;
@@ -96,4 +104,29 @@ h2 {
     .popup{
         width: 70%;
     }
+}
+
+/*Header*/
+
+/* Estilo del encabezado */
+header {
+    background-color: #333; 
+    color: #fff;
+    padding: 20px;
+    text-align: center; 
+}
+
+nav ul {
+    list-style: none; 
+}
+
+nav ul li {
+    display: inline; 
+    margin-right: 20px;
+}
+
+nav ul li a {
+    text-decoration: none; 
+    color: #fff; 
+    font-weight: bold; 
 }
