--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -12,6 +12,12 @@ h1 {
     margin-top: 20px;
 }
 
+h4{
+     color: #333;
+    margin-top: 20px;
+}
+
+
 a {
     display: inline-block;
     padding: 10px 20px;
