--- a/src/main/webapp/css/tablaEstudiante.css
+++ b/src/main/webapp/css/tablaEstudiante.css
@@ -11,18 +11,19 @@ h2 {
 }
 
 .box {
-    display: flex;
-    justify-content: flex-end; /* Alinea el botón "Cambiar Clave" a la derecha */
+display: flex; /* Utiliza flexbox para alinear los botones horizontalmente */
+    align-items: center; /* Centra verticalmente los elementos dentro del contenedor */
+    justify-content: space-between; /* Distribuye los elementos equitativamente */
     padding: 12px;
 }
 
 .button {
-    color: black;
+    color: midnightblue;
     border: 2px solid black;
     text-decoration: none;
     cursor: pointer;
     padding: 10px 20px; /* Ajusta el espaciado del botón */
-    background-color: lightgray;
+    background-color: lightcyan;
     border-radius: 6px;
 }
 
@@ -124,4 +125,22 @@ nav ul li a {
     text-decoration: none; 
     color: #fff; 
     font-weight: bold; 
+}
+
+nav ul li a:hover{
+    color: activecaption;
+}
+
+.button1{
+     color: midnightblue;
+    border: 2px solid black;
+    text-decoration: none;
+    cursor: pointer;
+    padding: 10px 20px; /* Ajusta el espaciado del botón */
+    background-color: lightcyan;
+    border-radius: 6px;
+}
+
+.button1:hover {
+    background: #ff4861;
 }
